fix row gap

--- a/wp-content/themes/academyAfrica/assets/css/src/widgets/learndash_course_grid.scss
+++ b/wp-content/themes/academyAfrica/assets/css/src/widgets/learndash_course_grid.scss
@@ -6,7 +6,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 80px;
+        row-gap: 40px;
 
         .item {
             width: 280px;
